gitops/cluster-services/connectivitylink/gateways/overlays/default-gateway-namespace.yaml
apiVersion: v1                    
kind: Namespace
metadata:
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: openshift-gitops
  name: kuadrant-gateway
