gitops/cluster-services/connectivitylink/gateways/overlays/default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    networking.istio.io/service-type: ClusterIP
  labels:
    kuadrant.io/gateway: "true"
  name: kuadrant-gateway
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: api.rhcl.prime.pitt.ca
    name: api
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: api-kuadrant-gateway-tls
      mode: Terminate
